--- a/Typora/html-preview/theme/itypen.css
+++ b/Typora/html-preview/theme/itypen.css
@@ -24,7 +24,7 @@ code {
 	white-space: pre-wrap;
     display: inline;
     padding: .2em;
-    background-color: #7a96b9;
+    background-color: #5588a3;
     color: #f5f5f5
 }
   
@@ -43,19 +43,19 @@ pre code {
 }
 
 strong, b{
-    color: #7a96b9;
+    color: #5588a3;
 }
 
 em,i {
-    color: #7a96b9;
+    color: #5588a3;
 }
 
 a {
-    color: #7a96b9;
+    color: #5588a3;
 }
 
 hr {
-    border: 1px solid #7a96b9;
+    border: 1px solid #5588a3;
     margin: 1.5em auto;
     width: 80%;
 }
@@ -244,7 +244,7 @@ h6 {
 
 a,
 .md-def-url {
-    color: #7a96b9;
+    color: #5588a3;
     text-decoration: none;
 }
 
