--- a/md-here.css
+++ b/md-here.css
@@ -33,7 +33,7 @@ code {
 pre {
   font-size: 15px;
   line-height: 1.4em;
-  display: block !important;
+  display: block; !important;
 }
 
 pre code {
@@ -45,25 +45,20 @@ pre code {
 }
 
 strong, b{
-  color: #5588a3;
+  color: #fbbc05;
 }
 
 em, i {
-  color: #5588a3;
-}
-
-a {
-  color: #5588a3;
+  color: #4285f4;
 }
 
 hr {
-  border: 1px solid #5588a3;
+  border: 1px solid #fbbc05;
   margin: 1.5em auto;
-  width: 80%;
 }
 
-mark {
-  background-color: #f6e79c;
+p {
+  margin: 1.5em 5px !important;
 }
 
 table, pre, dl, blockquote, q, ul, ol {
@@ -107,7 +102,7 @@ dl dd {
 }
 
 blockquote, q {
-  border-left: 2px solid #5588a3;
+  border-left: 2px solid #4285f4;
   padding: 0 10px;
   color: #777;
   quotes: none;
@@ -118,26 +113,24 @@ blockquote::before, blockquote::after, q::before, q::after {
   content: none;
 }
 
-img {
-  border-radius:5px;
-  
-}
-
 h1, h2, h3, h4, h5, h6 {
   margin: 20px 0 10px;
   padding: 0;
   font-style: bold !important;
-  color: #5588a3 !important;
+  color: #4285f4 !important;
+  text-align: center !important;
   margin: 1.5em 5px !important;
-  text-align: left !important;
+  padding: 0.5em 1em !important;
 }
 
 h1 {
-  font-size: 22px !important;
+  font-size: 26px !important;
+  border-bottom: 1px solid #ddd !important;
 }
 
 h2 {
   font-size: 20px !important;
+  border-bottom: 1px solid #eee !important;
 }
 
 h3 {
@@ -148,13 +141,6 @@ h4 {
   font-size: 16px;
 }
 
-h5 {
-  font-size: 16px;
-}
-
-h6 {
-  font-size: 16px;
-}
 
 table {
   padding: 0;
@@ -194,6 +180,6 @@ table tr th, table tr td {
 table tr th {
   font-weight: bold;
   color: #eee;
-  border: 1px solid #5588a3;
-  background-color: #5588a3;
+  border: 0px solid #4285f4;
+  background-color: #4285f4;
 }
