--- a/md-here.css
+++ b/md-here.css
@@ -12,7 +12,7 @@ aiokr learn from https://www.bpteach.com/knowledge-base/1052536/
 
 p {
   margin: 1.5em 5px !important;
-  font-size: 16px !important;
+  font-size: 14px !important;
   color: #222831;
   line-height: 1.8em;
   letter-spacing: 0.1em;
@@ -33,7 +33,7 @@ code {
 pre {
   font-size: 15px;
   line-height: 1.4em;
-  display: block; !important;
+  display: block !important;
 }
 
 pre code {
@@ -49,7 +49,7 @@ strong, b{
 }
 
 em, i {
-  color: #4285f4;
+  color: #2196f3;
 }
 
 hr {
@@ -102,11 +102,11 @@ dl dd {
 }
 
 blockquote, q {
-  border-left: 2px solid #4285f4;
+  border-left: 5px solid #fbbc05;
   padding: 0 10px;
-  color: #777;
   quotes: none;
   margin-left: 1em;
+  background: #f5f5f5;
 }
 
 blockquote::before, blockquote::after, q::before, q::after {
@@ -117,20 +117,19 @@ h1, h2, h3, h4, h5, h6 {
   margin: 20px 0 10px;
   padding: 0;
   font-style: bold !important;
-  color: #4285f4 !important;
-  text-align: center !important;
+  color: #222831 !important;
+  text-align: left !important;
   margin: 1.5em 5px !important;
-  padding: 0.5em 1em !important;
+  padding: 0 15px !important;
+  border-left: 5px solid #2196f3;
 }
 
 h1 {
-  font-size: 26px !important;
-  border-bottom: 1px solid #ddd !important;
+  font-size: 24px !important;
 }
 
 h2 {
   font-size: 20px !important;
-  border-bottom: 1px solid #eee !important;
 }
 
 h3 {
@@ -138,6 +137,14 @@ h3 {
 }
 
 h4 {
+  font-size: 16px;
+}
+
+h5 {
+  font-size: 16px;
+}
+
+h6 {
   font-size: 16px;
 }
 
@@ -150,6 +157,10 @@ table {
   font: inherit;
   border: 0;
   margin: 0 auto;
+}
+
+table strong {
+  color: #fff;
 }
 
 tbody {
@@ -179,7 +190,7 @@ table tr th, table tr td {
 
 table tr th {
   font-weight: bold;
-  color: #eee;
-  border: 0px solid #4285f4;
-  background-color: #4285f4;
+  color: #fff;
+  border: 0px solid #2196f3;
+  background-color: #2196f3;
 }
