--- a/md-here.css
+++ b/md-here.css
@@ -45,15 +45,15 @@ pre code {
 }
 
 strong, b{
-  color: #fbbc05;
+  color: #FF6E40;
 }
 
 em, i {
-  color: #2196f3;
+  color: #03A9F4;
 }
 
 hr {
-  border: 1px solid #fbbc05;
+  border: 1px solid #FF6E40;
   margin: 1.5em auto;
 }
 
@@ -102,7 +102,7 @@ dl dd {
 }
 
 blockquote, q {
-  border-left: 5px solid #fbbc05;
+  border-left: 5px solid #FF6E40;
   padding: 0 10px;
   quotes: none;
   margin-left: 1em;
@@ -121,7 +121,7 @@ h1, h2, h3, h4, h5, h6 {
   text-align: left !important;
   margin: 1.5em 5px !important;
   padding: 0 15px !important;
-  border-left: 5px solid #2196f3;
+  border-left: 5px solid #03A9F4;
 }
 
 h1 {
@@ -171,7 +171,7 @@ tbody {
 
 table tr {
   border: 0;
-  border-top: 1px solid #CCC;
+  border-top: 1px solid #F5F5F5;
   background-color: white;
   margin: 0;
   padding: 0;
@@ -183,7 +183,7 @@ table tr:nth-child(2n) {
 
 table tr th, table tr td {
   font-size: 16px;
-  border: 1px solid #CCC;
+  border: 1px solid #F5F5F5;
   margin: 0;
   padding: 5px 10px;
 }
@@ -191,6 +191,6 @@ table tr th, table tr td {
 table tr th {
   font-weight: bold;
   color: #fff;
-  border: 0px solid #2196f3;
-  background-color: #2196f3;
+  border: 0px solid #03A9F4;
+  background-color: #03A9F4;
 }
